# cashew

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  shell.nix
.github/workflows/: build.yml  docs.yml  test.yml
cashewc/: CMakeLists.txt  Cargo.toml
cashewc/src/: main.cpp
docs/: CMakeLists.txt  Doxyfile.in  build.sh
docs/source/: conf.py  index.rst
docs/src/: Features.md  Index.md  cashewc.md
libcashew/: CMakeLists.txt  Cargo.toml
libcashew-parser/: CMakeLists.txt
libcashew-parser/include/: cashew_parser.hpp  token.hpp
libcashew-parser/include/libcashew/: lexer.hpp
libcashew-parser/include/libcashew_parser/: exceptions.hpp  lexer.hpp  parser.hpp
libcashew-parser/src/: cashew_parser.cpp  lexer.cpp
libcashew/include/: cashew.hpp
libcashew/src/: cashew.cpp
tests/: test.cpp
tests/examples/: assignment_2.nut  comment_1.nut  comment_2.nut
tests/examples/invalid/: missing_closing_quote.nut
tests/examples/parser/: arithmetic_1.nut  arithmetic_2.nut  arithmetic_3.nut  arithmetic_4.nut  arithmetic_assignment_1.nut  explicit_type.nut  float_literal_1.nut  float_literal_2.nut  float_literal_3.nut  float_literal_4.nut  if_else_1.nut  int_literal_2.nut  int_literal_3.nut  int_literal_4.nut  string_literal_2.nut
tests/examples/parser/invalid/: invalid_float_literal_1.nut  invalid_float_literal_2.nut  invalid_float_literal_3.nut  invalid_int_literal_1.nut  invalid_int_literal_2.nut
tests/include/: util.hpp
tests/libcashew-parser/: lexer.cpp
tests/libcashew-parser/examples/: assignment_2.nut  comment_1.nut
tests/src/: util.cpp
tests/src/libcashew-parser/: lexer.cpp  lexer_invalid.cpp
